# DocMind

./: .gitignore  custom_types.py  data_loader.py  gcs_storage.py  main.py  pyproject.toml  streamlit_app.py  test.py  vector_db.py
