[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.45.0",
    "fastapi>=0.138.2",
    "google-cloud-storage>=3.4.1",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "inngest>=0.5.19",
    "langchain-google-genai>=4.2.6",
    "llama-index>=0.14.23",
    "llama-index-core>=0.14.23",
    "llama-index-readers-file>=0.6.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
